Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  ports:
  - port: 9000
    targetPort: 9000
    name: springboot-app-examen
  selector:
    app: springboot-app-examen
  type: NodePort
